--- a/figures_manuscript.ipynb
+++ b/figures_manuscript.ipynb
@@ -335,6 +335,9 @@
     "                            save_latex_table = true,\n",
     "                            domain_traversals = 0.25,\n",
     "                            N = 2^8,\n",
+    "                            spatial_discretization = periodic_derivative_operator,\n",
+    "                            polydeg = 7,\n",
+    "                            Nx = 2^5,\n",
     "                            alg = ARS443(),\n",
     "                            ImEx_name = \"ARS443\",\n",
     "                            dt = 0.005,\n",
@@ -343,13 +346,24 @@
     "    (; xmin, xmax, c) = solitary_wave_setup()\n",
     "    tspan = (0.0, domain_traversals * (xmax - xmin) / c)\n",
     "\n",
-    "    D1 = upwind_operators(periodic_derivative_operator;\n",
-    "                          derivative_order = 1, accuracy_order = 8,\n",
-    "                          xmin, xmax, N)\n",
+    "    if spatial_discretization === periodic_derivative_operator\n",
+    "        D1 = upwind_operators(periodic_derivative_operator;\n",
+    "                              derivative_order = 1, accuracy_order = 8,\n",
+    "                              xmin, xmax, N)\n",
+    "    elseif spatial_discretization === LegendreDerivativeOperator\n",
+    "        D_local = LegendreDerivativeOperator(-1.0, 1.0, polydeg + 1)\n",
+    "        mesh = UniformPeriodicMesh1D(; xmin, xmax, Nx)\n",
+    "        D1 = PeriodicUpwindOperators(\n",
+    "            couple_discontinuously(D_local, mesh, Val(:minus)),\n",
+    "            couple_discontinuously(D_local, mesh, Val(:central)),\n",
+    "            couple_discontinuously(D_local, mesh, Val(:plus))\n",
+    "        )\n",
+    "    end\n",
     "\n",
     "\n",
-    "    τs = [1.0e-1, 1.0e-2, 1.0e-3, 1.0e-4, 1.0e-5, 1.0e-6, 1.0e-7,\n",
-    "         1.0e-8, 1.0e-9, 1.0e-10, 1.0e-11, 1.0e-12]\n",
+    "    # τs = [1.0e-1, 1.0e-2, 1.0e-3, 1.0e-4, 1.0e-5, 1.0e-6, 1.0e-7,\n",
+    "    #      1.0e-8, 1.0e-9, 1.0e-10, 1.0e-11, 1.0e-12]\n",
+    "    τs = [1.0e-1, 1.0e-3, 1.0e-5, 1.0e-7, 1.0e-9, 1.0e-11]\n",
     "\n",
     "    errors_u_num = Float64[]\n",
     "    errors_v_num = Float64[]\n",
@@ -367,11 +381,10 @@
     "    end\n",
     "\n",
     "    # Computing the numerical reference solution for the auxiliary variables using the upwind derivative operator\n",
-    "    D = D1.central\n",
     "    v_ref_num = similar(u_ref_num)\n",
     "    w_ref_num = similar(u_ref_num)\n",
-    "    mul!(v_ref_num, D, u_ref_num)\n",
-    "    mul!(w_ref_num, D, v_ref_num)\n",
+    "    mul!(v_ref_num, D1.minus, u_ref_num)\n",
+    "    mul!(w_ref_num, D1.central, v_ref_num)\n",
     "\n",
     "    for τ in τs\n",
     "        equation = HyperbolizedKdV(τ)\n",
@@ -441,6 +454,7 @@
     "AP_property_imex(; latex = false,\n",
     "                   save_latex_table = true,\n",
     "                   domain_traversals = 0.25,\n",
+    "                   spatial_discretization = periodic_derivative_operator,\n",
     "                   N = 2^10,\n",
     "                   alg = SSP2ImEx222(),\n",
     "                   ImEx_name = \"SSP2ImEx222\",\n",
@@ -460,6 +474,7 @@
     "AP_property_imex(; latex = false,\n",
     "                   save_latex_table = true,\n",
     "                   domain_traversals = 0.25,\n",
+    "                   spatial_discretization = periodic_derivative_operator,\n",
     "                   N = 2^10,\n",
     "                   alg = SSP2ImEx332(),\n",
     "                   ImEx_name = \"SSP2ImEx332\",\n",
@@ -479,6 +494,7 @@
     "AP_property_imex(; latex = false,\n",
     "                   save_latex_table = true,\n",
     "                   domain_traversals = 0.25,\n",
+    "                   spatial_discretization = periodic_derivative_operator,\n",
     "                   N = 2^10,\n",
     "                   alg = AGSA342(),\n",
     "                   ImEx_name = \"AGSA342\",\n",
@@ -498,6 +514,7 @@
     "AP_property_imex(; latex = false,\n",
     "                   save_latex_table = true,\n",
     "                   domain_traversals = 0.25,\n",
+    "                   spatial_discretization = periodic_derivative_operator,\n",
     "                   N = 2^10,\n",
     "                   alg = SSP3ImEx343(),\n",
     "                   ImEx_name = \"SSP3ImEx343\",\n",
@@ -524,6 +541,7 @@
     "AP_property_imex(; latex = false,\n",
     "                   save_latex_table = true,\n",
     "                   domain_traversals = 0.25,\n",
+    "                   spatial_discretization = periodic_derivative_operator,\n",
     "                   N = 2^10,\n",
     "                   alg = ARS222(),\n",
     "                   ImEx_name = \"ARS222\",\n",
@@ -542,9 +560,30 @@
     "AP_property_imex(; latex = false,\n",
     "                   save_latex_table = true,\n",
     "                   domain_traversals = 0.25,\n",
+    "                   spatial_discretization = periodic_derivative_operator,\n",
     "                   N = 2^10,\n",
     "                   alg = ARS443(),\n",
     "                   ImEx_name = \"ARS443\",\n",
+    "                   dt = 0.005)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f7ca6b10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# AP results by ARS(4,4,3)\n",
+    "# ARS(4,4,3): 3rd order L-stable type II ImEX-RK, explicit part - FSAL, implicit part - SA; GSA.\n",
+    "AP_property_imex(; latex = false,\n",
+    "                   save_latex_table = true,\n",
+    "                   domain_traversals = 0.25,\n",
+    "                   spatial_discretization = LegendreDerivativeOperator,\n",
+    "                   polydeg = 3,\n",
+    "                   Nx = 2^8,\n",
+    "                   alg = ARS443(),\n",
+    "                   ImEx_name = \"ARS443_DG\",\n",
     "                   dt = 0.005)"
    ]
   },
@@ -561,6 +600,7 @@
     "AP_property_imex(; latex = false,\n",
     "                   save_latex_table = true,\n",
     "                   domain_traversals = 0.25,\n",
+    "                   spatial_discretization = periodic_derivative_operator,\n",
     "                   N = 2^10,\n",
     "                   alg = ARK324L2SA_ERK(),\n",
     "                   ImEx_name = \"ARK324L2SA_ERK\",\n",
@@ -582,6 +622,7 @@
     "AP_property_imex(; latex = false,\n",
     "                   save_latex_table = true,\n",
     "                   domain_traversals = 0.25,\n",
+    "                   spatial_discretization = periodic_derivative_operator,\n",
     "                   N = 2^10,\n",
     "                   alg = ARK436L2SA_ERK(),\n",
     "                   ImEx_name = \"ARK436L2SA_ERK\",\n",
